--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans&family=Barlow+Condensed&family=Bebas+Neue&family=Comic+Neue&family=Josefin+Sans:wght@300;400&family=Kalam:wght@300&family=Mali:ital,wght@0,400;0,500;1,400&family=Marcellus&family=Roboto+Flex:opsz@8..144&family=Single+Day&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Kalam");
+
 body {
   background-color: #f6ece3;
   box-sizing: border-box;
   margin: 0;
-  height: 100vh;
+  height: 100%;
 }
 
 .App {
@@ -13,6 +16,7 @@ body {
   background-position: right;
   background-repeat: no-repeat;
 }
+
 .content-container {
   display: flex;
   flex-direction: column;
@@ -21,18 +25,88 @@ body {
   align-items: center;
   width: 100%;
   align-self: center;
-  padding-bottom: 150px;
+  padding-bottom: 120px;
   font-family: "Comic Neue";
 }
 
 .home-h1 {
-  font-size: 50px;
+  font-size: 60px;
   font-weight: 700;
   color: #6a391b;
 }
 
 .home-p {
-  font-size: 20px;
+  font-size: 30px;
   font-weight: 400;
   color: #6a391b;
+}
+
+.main-nav {
+  list-style-type: none;
+  padding: 30px 60px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  gap: 40px;
+}
+
+.main-nav li {
+  margin-right: 10px;
+}
+
+.nav-a {
+  text-decoration: none;
+  color: #ffffff;
+  position: relative;
+  font-size: 18px;
+}
+
+.nav-b {
+  text-decoration: none;
+  color: #452107;
+  position: relative;
+  font-size: 18px;
+}
+
+.top-nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
+.main-logo {
+  text-align: center;
+  font-family: "Kalam", cursive;
+  font-size: 40px;
+  font-weight: 600;
+  color: #6a391b;
+  padding-bottom: 40px;
+  display: none;
+}
+
+/* Media Queries */
+@media screen and (max-width: 1200px) {
+  .content-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding-bottom: 100px;
+    margin: -250px;
+  }
+
+  .home-h1 {
+    font-size: 40px;
+  }
+
+  .home-p {
+    font-size: 20px;
+    padding: 10px;
+  }
+
+  .main-logo {
+    margin: 0;
+    font-size: 40px;
+    padding-bottom: 20px;
+  }
 }
