--- a/src/components/NavBar/Sidebar.css
+++ b/src/components/NavBar/Sidebar.css
@@ -18,24 +18,25 @@
   height: 100%;
   width: 250px;
   background: #e2af7b;
+  min-width: 250px; /* Set a minimum width */
+  max-width: 300px; /* Set a maximum width */
+  transition: transform 0.3s ease; /* Add smooth transition for transform property */
+  position: relative;
+  z-index: 90;
 }
 
 .SidebarList {
   height: auto;
   padding: 0;
-  width: 100%;
 }
 
 .SidebarList .row {
   width: 100%;
   height: 60px;
-  /* background-color: cadetblue; */
-  /* border: 1px solid black; */
   display: flex;
   color: white;
   justify-content: center;
   align-items: center;
-
   text-shadow: 2px 2px #d28952;
 }
 
@@ -56,6 +57,7 @@
 
 .row #title {
   flex: 70%;
+  z-index: 99;
 }
 
 .sidebartitle {
@@ -64,11 +66,11 @@
   font-size: 30px;
   font-weight: 600;
   color: #6a391b;
+  padding: 10px;
 }
 
 .SidebarIcon {
-  padding-top: 20px;
-  padding-bottom: 15px;
+  padding: 15px 0;
   text-align: center;
 }
 
@@ -81,4 +83,49 @@
   text-shadow: 2px 2px #895833;
   font-weight: 600;
   font-size: 13px;
+}
+
+.hamburger {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  display: none;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 25px;
+  height: 20px;
+  cursor: pointer;
+}
+
+.line {
+  width: 100%;
+  height: 3px;
+  background-color: #6a391b;
+  transition: transform 0.3s ease;
+}
+
+.open .line:nth-child(1) {
+  transform: rotate(-45deg) translate(-5px, 6px);
+}
+
+.open .line:nth-child(2) {
+  opacity: 0;
+}
+
+.open .line:nth-child(3) {
+  transform: rotate(45deg) translate(-5px, -6px);
+}
+
+@media screen and (max-width: 1200px) {
+  .Sidebar {
+    transform: translateX(-100%); /* Hide sidebar by default */
+  }
+
+  .menu.show .Sidebar {
+    transform: translateY(0); /* Show sidebar when menu is active */
+  }
+
+  .hamburger {
+    display: flex; /* Show hamburger icon */
+  }
 }
