--- a/src/components/User/Signup&Login.css
+++ b/src/components/User/Signup&Login.css
@@ -3,24 +3,32 @@
   margin: 0;
   padding: 0;
 }
+
+body {
+  height: 100%;
+}
+
 .login-form-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  height: 100vh;
   text-align: center;
   width: 100%;
   position: relative;
 }
 
 .login-form {
-  width: 560px;
+  width: 700px;
   background: #fff;
   border-radius: 10px;
   position: relative;
-  padding: 40px;
-  min-height: 60vh;
+  padding: 60px 100px 150px 100px;
+  min-height: 70vh;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  background-size: contain;
+  background-position: bottom;
+  background-repeat: no-repeat;
 }
 
 .login-form input {
@@ -75,7 +83,19 @@
 }
 
 .signup-text {
-  padding: 40px 0 0px;
+  padding: 30px 0 0px;
+}
+
+.login-p {
+  font-size: 18px;
+  font-weight: 500;
+  color: #6a391b;
+  font-family: "Comic Neue";
+}
+
+.logo {
+  font-family: "Kalam", cursive;
+  color: #452107;
 }
 
 /*signup-form*/
@@ -90,14 +110,17 @@
 }
 
 .signup-form {
-  width: 560px;
+  width: 700px;
   background: #fff;
   border-radius: 10px;
   position: relative;
-  padding: 20px;
-  min-height: 65vh;
+  padding: 60px 100px 140px 100px;
+  min-height: 80vh;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   padding: 40px;
+  background-size: contain;
+  background-position: bottom;
+  background-repeat: no-repeat;
 }
 
 .signup-form input {
@@ -136,6 +159,10 @@
   margin: 40px 0 0;
 }
 
+.signup-redirect {
+  color: #ff504a;
+}
+
 /*animation*/
 .circles {
   position: absolute;
@@ -150,8 +177,8 @@
   position: absolute;
   display: block;
   list-style: none;
-  width: 20px;
-  height: 20px;
+  width: 50px;
+  height: 50px;
   background: #c2a38f33;
   animation: animate 25s linear infinite;
   bottom: -150px;
@@ -174,8 +201,8 @@
 
 .circles li:nth-child(3) {
   left: 70%;
-  width: 20px;
-  height: 20px;
+  width: 30px;
+  height: 30px;
   animation-delay: 4s;
 }
 
@@ -218,16 +245,16 @@
 
 .circles li:nth-child(9) {
   left: 20%;
-  width: 30px;
-  height: 30px;
+  width: 50px;
+  height: 50px;
   animation-delay: 2s;
   animation-duration: 35s;
 }
 
 .circles li:nth-child(10) {
   left: 85%;
-  width: 110px;
-  height: 110px;
+  width: 70px;
+  height: 70px;
   animation-delay: 0s;
   animation-duration: 11s;
 }
