--- a/src/components/Holiday/Holiday.css
+++ b/src/components/Holiday/Holiday.css
@@ -6,7 +6,7 @@ body {
 
 .holiday-container {
   display: flex;
-  height: 100%;
+  height: 500vh;
   background-repeat: no-repeat;
   background-size: contain;
   background-position: top;
@@ -153,9 +153,7 @@ body {
   }
 
   .holiday-list-container {
-    /* Additional styles for larger screens */
-    column-count: 2;
-    width: 80vw;
+    width: 90vw;
   }
 
   .holiday-head {
