--- a/src/components/ExpenseTracker/items/Item.module.css
+++ b/src/components/ExpenseTracker/items/Item.module.css
@@ -16,7 +16,7 @@
 }
 
 .income {
-  background-color: #dcf7ae;
+  background-color: #cce6b3;
   color: #5f4018;
   font-weight: 600;
   font-size: 18px;
