--- a/src/components/Diary/Diary.css
+++ b/src/components/Diary/Diary.css
@@ -27,7 +27,7 @@
 .diary-h4 {
   font-weight: 400;
   padding-bottom: 30px;
-  padding-top: 40px;
+  padding-top: 30px;
 }
 
 /*holiday imgr*/
@@ -38,6 +38,7 @@
 
 .diary-img1 {
   height: 200px;
+  padding-bottom: 30px;
 }
 
 /*new*/
@@ -52,7 +53,7 @@
   display: flex;
   flex-direction: column;
   justify-content: start;
-  width: 80%;
+  width: 60%;
   min-height: 100vh;
   background: #ffffffad;
   text-align: center;
@@ -88,8 +89,8 @@
   padding: 14px 32px 14px 16px;
   border-radius: 4px;
   border: 1px solid #ae7352;
-  width: 94%;
-  height: 450px;
+  width: 92%;
+  height: 200px;
 }
 
 .diary-button {
@@ -118,15 +119,15 @@
   flex-direction: column;
   align-items: center;
   margin: 4px auto;
-  padding: 16px;
   width: 90%;
-  background: #ffdac5;
+  background: #ffdac5ec;
   color: #6b412b;
   font-family: "Kalam", cursive;
   cursor: pointer;
   font-size: 18px;
   max-height: 30vh;
   overflow: auto;
+  border-radius: 20px;
 }
 
 .diary-row:hover {
@@ -136,8 +137,10 @@
 }
 
 .diary-row-header {
-  color: #3b1d0c;
+  color: #ffffff;
   font-weight: 600;
+  background-color: #ae745280;
+  width: 100%;
 }
 
 .delete {
