--- a/App.css
+++ b/App.css
@@ -5,7 +5,6 @@ body {
   background-color: #f6ece3;
   box-sizing: border-box;
   margin: 0;
-  height: 100%;
 }
 
 .App {
@@ -13,7 +12,7 @@ body {
   flex-direction: row;
   height: 100%;
   background-size: cover;
-  background-position: right;
+  background-position: bottom;
   background-repeat: no-repeat;
 }
 
@@ -27,18 +26,21 @@ body {
   align-self: center;
   padding-bottom: 120px;
   font-family: "Comic Neue";
+  min-height: 100vh;
 }
 
 .home-h1 {
-  font-size: 60px;
+  font-size: 70px;
   font-weight: 700;
   color: #6a391b;
+  padding-bottom: 20px;
 }
 
 .home-p {
   font-size: 30px;
   font-weight: 400;
   color: #6a391b;
+  padding: 0 30px;
 }
 
 .main-nav {
